--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "baffle": "^0.3.6",
+    "firebase": "^9.20.0",
     "gsap": "^3.11.4",
     "postprocessing": "^6.30.2",
     "react": "^18.2.0",
